--- a/app/views/base.html
+++ b/app/views/base.html
@@ -40,8 +40,27 @@
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
             <li><a href="{{base_path}}">Etusivu</a></li>
+            <li><a href="{{base_path}}/genres">Genret</a></li>
           </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if user_logged_in %}
+                <li class="dropdown">
+                    <a class="dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+                        {{user_logged_in.username}}
+                        <span class="caret"></span>
+                    </a>
+                <ul class="dropdown-menu">
+                    <li><a href="{{base_path}}/logout">Kirjaudu ulos</a></li>
+                </ul>
+                </li>
+                {% else %}
+                <li><a href="{{base_path}}/login">Kirjaudu sisään</a></li>
+                {% endif %}
+            </ul>
         </div>
+          <div>
+              
+          </div>
       </div>
     </nav>
 
