--- a/app/views/genre/new.html
+++ b/app/views/genre/new.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Lisää uusi elokuva</h1>
+<h1>Lisää uusi genre</h1>
 <div class="col-md-6">
     {% if errors %}
     <div class="alert alert-danger">
@@ -12,14 +12,10 @@
         </ul>
     </div>
     {% endif %}
-    <form method="post" action="{{base_path}}/movies">
+    <form method="post" action="{{base_path}}/genres">
         <div class="form-group">
             <label>Nimi</label>
             <input type="text" name="name" class="form-control" value="{{attributes.name}}">
-        </div>
-        <div class="form-group">
-            <label>Julkaisuvuosi</label>
-            <input type="number" name="year" class="form-control" value="{{attributes.year}}">
         </div>
         <div class="form-group">
             <label>Kuvaus</label>
