--- a/app/views/genre/show.html
+++ b/app/views/genre/show.html
@@ -6,30 +6,31 @@
     {{notice}}
 </div>
 {% endif %}
-<h1>Elokuvat</h1>
+<h1>Genre: {{genre.name}}</h1>
+<p>{{genre.description}}</p>
+
+<h3>Elokuvia, jotka kuuluvat genreen</h3>
+{% if movies is empty %}
+<label>Ei elokuvia.</label>
+{% else %}
 <table class="table table-hover">
     <thead>
-    <th>Viestejä</th>
     <th>Elokuva</th>
     <th>Julkaisuvuosi</th>
 </thead>
 <tbody>
     {% for movie in movies %}
     <tr>
-        <td>{{movie.messagecount}}</td>
         <td><a href="{{base_path}}/movies/{{movie.id}}">{{movie.name}}</a></td>
         <td>{{movie.year}}</td>
-        {% if user_logged_in %}
-        <td>{{forms.destroy_button("#{base_path}/movies/#{movie.id}/destroy")}}</td>
-        {% endif %}
     </tr>
     {% endfor %}
 </tbody>
 </table>
+{% endif %}
 
 {% if user_logged_in %}
-<form action="{{base_path}}/movies/new" method="get">
-    <button class="btn btn-primary">Lisää elokuva</button>
-</form>
+{{forms.edit_button("#{base_path}/genres/#{genre.id}/edit")}}
+{{forms.destroy_button("#{base_path}/genres/#{genre.id}/destroy")}}
 {% endif %}
 {% endblock %}
