--- a/app/views/genre/list.html
+++ b/app/views/genre/list.html
@@ -17,7 +17,7 @@
     <tr>
         <td><a href="{{base_path}}/genres/{{genre.id}}">{{genre.name}}</a></td>
         <td>{{genre.moviecount}}</td>
-        {% if user_logged_in %}
+        {% if user_logged_in.administrator %}
         <td>{{forms.destroy_button("#{base_path}/genres/#{genre.id}/destroy")}}</td>
         {% endif %}
     </tr>
