--- a/app/views/base.html
+++ b/app/views/base.html
@@ -55,6 +55,7 @@
                 </li>
                 {% else %}
                 <li><a href="{{base_path}}/login">Kirjaudu sisään</a></li>
+                <li><a href="{{base_path}}/register">Rekisteröidy</a></li>
                 {% endif %}
             </ul>
         </div>
