--- a/app/views/movie/edit.html
+++ b/app/views/movie/edit.html
@@ -14,6 +14,7 @@
     {% endif %}
     <form method="post" action="{{base_path}}/movies/{{attributes.id}}/edit">
         <input type="hidden" name="id" value="{{attributes.id}}">
+        <input type="hidden" name="creator_id" class="form-control" value="{{attributes.creator_id}}">
         <div class="form-group">
             <label>Nimi</label>
             <input type="text" name="name" class="form-control" value="{{attributes.name}}">
@@ -25,6 +26,14 @@
         <div class="form-group">
             <label>Kuvaus</label>
             <textarea name="description" class="form-control">{{attributes.description}}</textarea>
+        </div>
+        <div class="form-group">
+            <label>Genret</label>
+            <select class="form-control" name="genres[]" multiple="">
+                {% for genre in genres %}
+                <option value="{{genre.id}}">{{genre.name}}</option>
+                {% endfor %}
+            </select>
         </div>
         <button type="submit" class="btn btn-primary">Tallenna muutokset</button>
     </form>
