--- a/app/views/movie/new.html
+++ b/app/views/movie/new.html
@@ -25,6 +25,14 @@
             <label>Kuvaus</label>
             <textarea name="description" class="form-control">{{attributes.description}}</textarea>
         </div>
+        <div class="form-group">
+            <label>Genret</label>
+            <select class="form-control" name="genres[]" multiple="">
+                {% for genre in genres %}
+                <option value="{{genre.id}}">{{genre.name}}</option>
+                {% endfor %}
+            </select>
+        </div>
         <button type="submit" class="btn btn-primary">Lisää</button>
     </form>
 </div>
