--- a/app/views/message/new.html
+++ b/app/views/message/new.html
@@ -1,10 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Uusi viesti elokuvaan {{movie.name}}</h1>
+<h1>Uusi viesti elokuvaan</h1>
 <div class="col-md-6">
+    {% if errors %}
+    <div class="alert alert-danger">
+        <ul>
+            {% for error in errors %}
+            <li>{{error}}</li>
+            {% endfor %}
+        </ul>
+    </div>
+    {% endif %}
     <form method="post" action="{{base_path}}/movies/{{movie.id}}/new">
         <div class="form-group">
+            <input type="hidden" name="movie_id" value="{{movie.id}}">
             <label>Viestin sisältö</label>
             <textarea class="form-control" rows="3" name="content"></textarea>
         </div>
