--- a/app/views/base.html
+++ b/app/views/base.html
@@ -50,6 +50,7 @@
                         <span class="caret"></span>
                     </a>
                 <ul class="dropdown-menu">
+                    <li><a href="{{base_path}}/accounts/{{user_logged_in.id}}/show">Omat tiedot</a></li>
                     <li><a href="{{base_path}}/logout">Kirjaudu ulos</a></li>
                 </ul>
                 </li>
