--- a/app/views/macros/forms.html
+++ b/app/views/macros/forms.html
@@ -1,12 +1,12 @@
 {% macro destroy_button(action ,text) %}
-<form method="post" action="{{action}}" style="display: inline-block;">
-    <button type="submit" class="btn btn-danger">{{text|default('Poista')}}</button>
+<form method="post" action="{{action}}" class="destroy-form" data-confirm="Haluatko varmasti poistaa {{text}}?" style="display: inline-block;">
+    <button type="submit" class="btn btn-danger">Poista</button>
 </form>
 {% endmacro %}
 
-{% macro edit_button(action) %}
+{% macro edit_button(action, text) %}
 <form method="get" action="{{action}}" style="display: inline-block;">
-    <button type="submit" class="btn btn-primary">Muokkaa</button>
+    <button type="submit" class="btn btn-primary">{{text|default('Muokkaa')}}</button>
 </form>
 {% endmacro %}
 
